--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "middleware",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "build": "tsc",
-    "dev": "ts-node ./lib/index.ts",
-    "start": "nodemon ./dist/index.js",
+    "dev": "ts-node ./lib/server.ts",
+    "start": "nodemon ./dist/server.js",
     "prod": "npm run build && npm run start"
   },
   "author": "",
