Modified finder for pathfinding with endpoint

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,9 @@
         "**/.vscode/**",
         "**/node_modules/**",
         "**/dist/**",
-        "**/lib/deprecated/**"
+        "**/lib/deprecated/**",
+        "**/package-lock.json",
+        "**/package.json",
+        "**/tsconfig.json"
     ]
 }
